--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>ImageGallery</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="img_favicon.png">
 </head>
 
 <body>
